<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rankin.adam.cookingmaster.activity.ViewRecipeActivity">


    <ImageView
        android:id="@+id/checkered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/recipe_book_background"
        android:tileMode="repeat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <ImageView
        android:id="@+id/outside_imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/checkered"
        app:layout_constraintStart_toStartOf="@+id/checkered"
        app:layout_constraintTop_toTopOf="@+id/checkered"
        app:layout_constraintBottom_toBottomOf="@+id/checkered"
        android:layout_margin="8dp"
        android:background="@color/material_dynamic_neutral90"/>


    <TextView
        android:id="@+id/viewRecipeAct_txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/recipe_name"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/viewRecipeAct_photo"
        android:layout_width="80dp"
        android:layout_height="78dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@mipmap/default_recipe"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewRecipeAct_rating_bar"
        android:contentDescription="@string/recipe_photo_thumbnail"/>

    <ImageView
        android:id="@+id/viewRecipeAct_expanded_photo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@mipmap/default_recipe"
        android:contentDescription="@string/zoomed_in_photo"
        android:scaleType="fitCenter"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/viewRecipeAct_txt_instructions_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewRecipeAct_txt_name" />

    <TextView
        android:id="@+id/viewRecipeAct_txt_time"
        android:layout_width="38dp"
        android:layout_height="26dp"
        android:layout_marginStart="8dp"
        android:text="@string/time_label"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/viewRecipeAct_txt_mins"
        app:layout_constraintStart_toStartOf="@+id/viewRecipeAct_photo" />

    <TextView
        android:id="@+id/viewRecipeAct_txt_mins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/mins"
        app:layout_constraintEnd_toEndOf="@+id/viewRecipeAct_photo"
        app:layout_constraintStart_toEndOf="@+id/viewRecipeAct_txt_time"
        app:layout_constraintTop_toBottomOf="@+id/viewRecipeAct_txt_name" />
    <Button
        android:id="@+id/viewRecipeAct_btn_view_allergens"
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/allergens"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/viewRecipeAct_btn_view_ingredients"
        app:layout_constraintTop_toBottomOf="@+id/viewRecipeAct_photo" />

    <Button
        android:id="@+id/viewRecipeAct_btn_view_ingredients"
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/ingredients"
        app:layout_constraintEnd_toStartOf="@+id/viewRecipeAct_btn_view_allergens"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewRecipeAct_photo" />



    <TextView
        android:id="@+id/viewRecipeAct_txt_instructions_header"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/instructions"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewRecipeAct_btn_view_ingredients" />

    <TextView
        android:id="@+id/viewRecipeAct_edt_instructions"
        android:layout_width="match_parent"
        android:layout_height="310dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/viewRecipeAct_btn_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewRecipeAct_txt_instructions_header"
        app:layout_constraintVertical_bias="1.0"
        tools:text="cooking instructions"
        android:background="@color/material_dynamic_neutral90"/>/>

    <Button
        android:id="@+id/viewRecipeAct_btn_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/viewRecipeAct_btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/viewRecipeAct_btn_cook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/cook"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/viewRecipeAct_btn_edit"
        app:layout_constraintStart_toStartOf="@+id/viewRecipeAct_btn_delete" />

    <RatingBar
        android:id="@+id/viewRecipeAct_rating_bar"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:isIndicator="false"
        android:numStars="5"
        app:layout_constraintBottom_toTopOf="@+id/viewRecipeAct_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewRecipeAct_txt_time" />



</androidx.constraintlayout.widget.ConstraintLayout>
